[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centerline-svg"
version = "0.1.0"
description = "Trace the centerline (medial axis) of a solid shape in a PNG and emit an SVG. Pure standard library."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "anhnd", email = "anhnd350309@gmail.com" }]
keywords = ["svg", "png", "skeleton", "medial-axis", "centerline", "thinning", "zhang-suen"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = []  # pure stdlib

[project.urls]
Homepage = "https://github.com/anhnd/centerline-svg"
Repository = "https://github.com/anhnd/centerline-svg"

[project.scripts]
centerline-svg = "centerline_svg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/centerline_svg"]

[tool.hatch.build.targets.sdist]
# ship the source + docs, not the sample outputs / editor config
exclude = ["/out", "/out_steps", "/dist", "/.vscode", "/.github"]

